# django-socio-grpc-example

./: .gitignore  HISTORY.md  README.md  docker-compose.dev.yaml  docker-compose.yaml
api/: buf.gen.yaml
api/grpc/python/: pyproject.toml
backend/: Dockerfile  bib_example_async_client.py  bib_example_client.py  bib_example_filter_client.py  bib_example_sync_client.py  client.py  image_upload_client_async.py  manage.py  pyproject.toml  simple_client.py
backend/app_example/: handlers.py  models.py  serializers.py  services.py
backend/app_example/grpc/: app_example.proto  app_example_pb2.py  app_example_pb2_grpc.py
backend/app_example/migrations/: 0001_initial.py
backend/async_example_bib_app/: admin.py  filters.py  handlers.py  serializers.py  services.py
backend/async_example_bib_app/grpc/: async_example_bib_app.proto  async_example_bib_app_pb2.py  async_example_bib_app_pb2_grpc.py
backend/dsg_example/: settings.py  urls.py  wsgi.py
backend/example_bib_app/: admin.py  apps.py  filters.py  handlers.py  models.py  serializers.py  services.py  subscriptions.py  tests.py
backend/example_bib_app/grpc/: async_example_bib_app_pb2.py  example_bib_app.proto  example_bib_app_pb2.py  example_bib_app_pb2_grpc.py
backend/example_bib_app/migrations/: 0001_initial.py  0002_alter_author_author_id_alter_book_book_id_and_more.py  0002_alter_author_birth_date_alter_author_name_first_and_more.py  (+1 more)
backend/jupyter/: async_example_bib_explorer.ipynb  django_api_explorer.ipynb  example_bib_CRUD_explorer.ipynb  example_bib_explorer.ipynb  example_subscription.ipynb
(+59 files in other folders)
